Fix arrow border and pixel shift.
Fix issue with nesting when only one block present on the movers. Props @paulwilde.

Fix issue with separator and pullquote pixelshifting on hover. Turns out this was due to collapsing margins, and iffy rounding that happened when a new toolbar was present. For now I prevented margins from collapsing on those, but this should be revisited and refactored separately.

--- a/editor/components/block-list/style.scss
+++ b/editor/components/block-list/style.scss
@@ -34,6 +34,10 @@
 	.editor-block-list__block-edit {
 		margin-top: $block-padding;
 		margin-bottom: $block-padding;
+
+		// Prevent collapsing margins @todo try and revisit this, it's conducive to theming to allow these to collapse
+		padding-top: .1px;
+		padding-bottom: .1px;	
 	}
 
 	margin-bottom: $block-spacing;
