--- a/editor/components/block-mover/style.scss
+++ b/editor/components/block-mover/style.scss
@@ -22,6 +22,7 @@
 			background: $white;
 			border-color: $light-gray-500;
 			border-style: solid;
+			border-width: 1px;
 
 			&:first-child {
 				border-width: 1px 1px 0 1px;
